[package]
name = "elora_hid"
version = "0.2.0"
edition = "2021"
authors = ["Nikolajus <nikolajus@gmail.com>"]

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
env_logger = "0.10.1"
hidapi = "2.4.1"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
